--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -85,7 +85,7 @@
     <div class="container">
         <!-- fire text animation -->
         <div class="fire-text">
-            <h2 class="ttu">isready</h2>
+            <h2 class="ttu">itsready</h2>
         </div>
         <svg>
             <filter id="fire">
