--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -1,10 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<form>
-{% csrf_token %}
-{{form}}
-<br/>
-<input type="submit" value="Login" />
+<!-- styles -->
+<style>
+    .login-form {
+        max-width: 100%;
+    }
+    .login-form input:not(:last-child) {
+        margin-bottom: .5rem;
+        padding: 0.5rem;
+    }
+    .login-form label {
+        display: none;
+    }
+    @media (max-width: 480px) {
+        .login-form,
+        .login-form input {
+            font-size: 0.8rem;
+        }
+    }
+</style>
+<!-- end of styles -->
+<div class="container mh80 justify-content-center align-items-center d-flex">
+    <form class="login-form p-4 d-flex flex-column bg-success rounded shadow">
+    {% csrf_token %}
+    {{form}}
+        <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm" value="Login" />
+    </form>
+</div>
 
-</form>
 {% endblock %}
