--- a/home/templates/registration/password_change_form.html
+++ b/home/templates/registration/password_change_form.html
@@ -11,7 +11,8 @@
 
 {% block content %}<div id="content-main">
 
-<form method="post">{% csrf_token %}
+<form action="{% url 'password_change' %}" method="post">
+{% csrf_token %}
 <div>
 {% if form.errors %}
     <p class="errornote">
