--- a/home/templates/registration/password_reset_form.html
+++ b/home/templates/registration/password_reset_form.html
@@ -14,7 +14,7 @@
 
 <p>{% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}</p>
 
-<form method="post">{% csrf_token %}
+<form action="{% url 'password_reset' %}" method="post">{% csrf_token %}
 <fieldset class="module aligned">
     <div class="form-row field-email">
         {{ form.email.errors }}
