--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,7 @@
 <div class="header">
     <div class="overlay w100 h100 d-flex justify-content-center align-items-center">
         <div class="content-box txt-white text-center mxw-700">
-            <h1 class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+            <h1 class="mb-5">Providing messaging and voice services to businesses in the United States and beyond.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor porro enim officiis! Ipsum, ut? Cupiditate ab veniam quaerat ex in quam facere consequatur quisquam possimus!</p>
         </div>
     </div>
@@ -29,7 +29,10 @@
         <!-- end of fire text animation -->
         <div class="row">
             <div class="col fz-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nihil impedit enim ipsam tempore natus at sapiente eos tenetur, repellendus soluta eligendi saepe incidunt est vel ex voluptate recusandae vitae.
+                Itsready is a mobile responsive application enabling instant text messaging and voice calling. Service 
+providers rely on our platform to communicate with their customers at the click of a button. This 
+application is an intellectual property of Nivee LLC.
+
             </div> 
         </div>
     </div>
@@ -54,7 +57,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h2 class="display-4 ttc" style="font-size: 2.5rem;">send us a message</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum animi, dicta temporibus veritatis placeat eveniet labore dolore minima voluptatem assumenda nam! Modi non exercitationem veritatis quidem aut, deserunt dolore mollitia?</p>
+                <p>Please email us via adm@niveel.com or send us a message here and we will reply via email within 24 hrs.</p>
             </div>
             <div class="col-md-6">
                 <form class="p-2">
@@ -80,12 +83,12 @@
     </div>
 </section>
 <!-- end of contact -->
-<!-- section -->
-<section class="py-5">
+<!-- faq -->
+<section class="py-5 text-success" id="about">
     <div class="container">
         <!-- fire text animation -->
         <div class="fire-text">
-            <h2 class="ttu">itsready</h2>
+            <h4 class="ttu">FAQ</h4>
         </div>
         <svg>
             <filter id="fire">
@@ -96,7 +99,140 @@
             </filter>
         </svg>
         <!-- end of fire text animation -->
+        <div class="row py-5">
+            <div class="col fz-sm">
+                <div class="accordion" id="accord-parent" style="max-width: 600px; margin: 0 auto;">
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingOne">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Are customer replies enabled?
+                          </button>
+                        </h2>
+                      </div>
+                  
+                      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accord-parent">
+                        <div class="card-body text-success">
+                            Yes, customers can respond directly to service providers messages.
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingTwo">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Do you have usage limitations?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accord-parent">
+                        <div class="card-body">
+                            No, you can choose to send a message/call one person at a time or send 
+to many people at once.
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingThree">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Is this application available globally?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accord-parent">
+                        <div class="card-body">
+                            Yes, Itsready can be access in any part of the world
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingFour">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            How do I access the application?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accord-parent">
+                        <div class="card-body">
+                            You can download the application onto your desktop or access it 
+directly through a browser. The website is www.itsreaddy.com
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingFive">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                            How do I sign up?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accord-parent">
+                        <div class="card-body">
+                            Sign up is easy. Download the application or go to the website and click sign up. 
+                            Answer few questions and your account is ready for use immediately.
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingSix">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                            Is this a paid application?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accord-parent">
+                        <div class="card-body">
+                            Yes, but we have a one-week trial period before we charge you. Subscription 
+                            renews each month until canceled.
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                    <!-- start -->
+                    <div class="card">
+                      <div class="card-header bg-success" id="headingSeven">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                            How much do you charge per subscription?
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accord-parent">
+                        <div class="card-body">
+                            $1.99/month
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end -->
+                  </div>
+            </div> 
+        </div>
     </div>
 </section>
-<!-- end of section -->
+<!-- end of faq -->
+<!-- signup alert -->
+{% for message in messages %}
+<div class="signup-alert alert alert-success alert-dismissible fade show" role="alert">
+    {{message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{% endfor %}
+<!-- end of signup alert -->
 {% endblock %}
