--- a/home/templates/registration/signup.html
+++ b/home/templates/registration/signup.html
@@ -22,7 +22,7 @@
         width: 100%;
         padding: 0.5rem;
         background: white;
-        color: #219150!important;
+        color: rgb(146, 8, 8)!important;
         margin-bottom: 0.5rem;
         font-weight: bold;
     }
