--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --green: #27ae60;
+    --greenOpac: rgba(39, 174, 96,.1);
     --green-alt: #219150;
 }
 html {
@@ -50,6 +51,7 @@ textarea {
 }
 body {
     overflow-x: hidden;
+    font-size: clamp(1.2rem, 1.2vw, 1.6rem)!important;
 }
 /* custom styles */
 .bg-green {
@@ -77,7 +79,7 @@ body {
     background-color: rgba(12, 12, 12, .3);
 }
 .fz-sm {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 .ttu {
     text-transform: uppercase!important;
@@ -105,20 +107,20 @@ body {
     position: relative;
     color: var(--green);
     font-weight: 600;
-    font-size: 3rem;
+    font-size: 2.5rem;
     /* -webkit-box-reflect: below -20px linear-gradient(transparent,#0008); */
     text-shadow: 0 0 10px var(--green-alt);
 }
 .fire-text h4.white {
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 svg {
     display: none;
 }
 @media (max-width: 550px) {
     .fire-text h4 {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 }
 @media (max-width: 350px) {
@@ -145,3 +147,9 @@ svg {
     z-index: 100000000;
 }
 /* end of signup alert */
+/* faq accordion */
+[class="accordion"] [class="card-body"] {
+    background-color: var(--greenOpac);
+    font-size: 1.4rem;
+} 
+/* faq end of accordion */
