--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Providing messaging and voice services to businesses in the United States and beyond. Itsready is a mobile responsive application enabling instant text messaging and voice calling. Service 
+    providers rely on our platform to communicate with their customers at the click of a button. This 
+    application is an intellectual property of Nivee LLC.">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
@@ -13,10 +15,10 @@
     <script src="{% static 'js/all.js' %}"></script>
 </head>
 <body> 
- 
+
     <!-- nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow">
-        <a class="navbar-brand" href="#">ITSREADY</a>
+        <a class="navbar-brand" href="{% url 'home' %}">ITSREADY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
