--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,8 +5,7 @@
 <div class="header">
     <div class="overlay w100 h100 d-flex justify-content-center align-items-center">
         <div class="content-box txt-white text-center mxw-700">
-            <h1 class="mb-5">Providing messaging and voice services to businesses in the United States and beyond.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor porro enim officiis! Ipsum, ut? Cupiditate ab veniam quaerat ex in quam facere consequatur quisquam possimus!</p>
+            <h1 class="mb-5" data-aos="fade-up">Providing messaging and voice services to businesses in the United States and beyond.</h1>
         </div>
     </div>
 </div>
@@ -15,7 +14,7 @@
 <section class="py-5 text-success" id="about">
     <div class="container">
         <!-- fire text animation -->
-        <div class="fire-text">
+        <div class="fire-text" data-aos="fade-up">
             <h4 class="ttu">about us</h4>
         </div>
         <svg>
@@ -28,7 +27,7 @@
         </svg>
         <!-- end of fire text animation -->
         <div class="row">
-            <div class="col fz-sm">
+            <div class="col fz-sm" data-aos="fade-up" data-aos-delay="200">
                 Itsready is a mobile responsive application enabling instant text messaging and voice calling. Service 
 providers rely on our platform to communicate with their customers at the click of a button. This 
 application is an intellectual property of Nivee LLC.
@@ -42,7 +41,7 @@ application is an intellectual property of Nivee LLC.
 <section class="bg-success py-5 text-white" id="contact">
     <div class="container">
         <!-- fire text animation -->
-        <div class="fire-text">
+        <div class="fire-text" data-aos="fade-up">
             <h4 class="ttu white">contact us</h4>
         </div>
         <svg>
@@ -55,11 +54,11 @@ application is an intellectual property of Nivee LLC.
         </svg>
         <!-- end of fire text animation -->
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-left">
                 <h2 class="display-4 ttc" style="font-size: 2.5rem;">send us a message</h2>
                 <p>Please email us via adm@niveel.com or send us a message here and we will reply via email within 24 hrs.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="fade-right">
                 <form class="p-2">
                     <div class="row p-2">
                       <div class="col-sm-6 mb-2 mb-sm-0">
@@ -87,7 +86,7 @@ application is an intellectual property of Nivee LLC.
 <section class="py-5 text-success" id="about">
     <div class="container">
         <!-- fire text animation -->
-        <div class="fire-text">
+        <div class="fire-text" data-aos="fade-up">
             <h4 class="ttu">FAQ</h4>
         </div>
         <svg>
@@ -103,7 +102,7 @@ application is an intellectual property of Nivee LLC.
             <div class="col fz-sm">
                 <div class="accordion" id="accord-parent" style="max-width: 600px; margin: 0 auto;">
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up">
                       <div class="card-header bg-success" id="headingOne">
                         <h2 class="mb-0">
                           <button class="btn btn-link text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -113,14 +112,14 @@ application is an intellectual property of Nivee LLC.
                       </div>
                   
                       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accord-parent">
-                        <div class="card-body text-success">
+                        <div class="card-body">
                             Yes, customers can respond directly to service providers messages.
                         </div>
                       </div>
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="200">
                       <div class="card-header bg-success" id="headingTwo">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -137,7 +136,7 @@ to many people at once.
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="300">
                       <div class="card-header bg-success" id="headingThree">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -153,7 +152,7 @@ to many people at once.
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="400">
                       <div class="card-header bg-success" id="headingFour">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -170,7 +169,7 @@ directly through a browser. The website is www.itsreaddy.com
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="500">
                       <div class="card-header bg-success" id="headingFive">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
@@ -187,7 +186,7 @@ directly through a browser. The website is www.itsreaddy.com
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="600">
                       <div class="card-header bg-success" id="headingSix">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
@@ -204,7 +203,7 @@ directly through a browser. The website is www.itsreaddy.com
                     </div>
                     <!-- end -->
                     <!-- start -->
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-delay="700">
                       <div class="card-header bg-success" id="headingSeven">
                         <h2 class="mb-0">
                           <button class="btn btn-link collapsed text-white font-weight-bold w-100" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
