--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -3,7 +3,8 @@
 <!-- styles -->
 <style>
     .login-form {
-        max-width: 100%;
+        width: 100%;
+        max-width: 30rem;
     }
     .login-form input:not(:last-child) {
         margin-bottom: .5rem;
@@ -20,12 +21,15 @@
     }
 </style>
 <!-- end of styles -->
-<div class="container mh80 justify-content-center align-items-center d-flex">
+<div class="container mh80 flex-column justify-content-center align-items-center d-flex" style="padding-top: 56px;">
     <form class="login-form p-4 d-flex flex-column bg-success rounded shadow" action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {{form}}
-        <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm" value="Login" />
+        <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm d-block w-50" value="Login" />
     </form>
+    <div class="info-box">
+        <p class="helptext">Don't have an account? <a href="{% url 'signup' %}">Signup</a></p>
+    </div>
 </div>
 
 {% endblock %}
