--- a/home/templates/registration/signup.html
+++ b/home/templates/registration/signup.html
@@ -6,7 +6,8 @@ Register
 <!-- styles -->
 <style>
     .signup-form {
-        max-width: 100%;
+        width: 100%;
+        max-width: 30rem;
     }
     .signup-form input {
         color: #27ae60!important;
@@ -37,12 +38,15 @@ Register
     }
 </style>
 <!-- end of styles -->
-<div class="container mh80 justify-content-center align-items-center d-flex">
+<div class="container mh100 justify-content-center flex-column align-items-center d-flex" style="padding-top: 56px;">
     <form class="signup-form p-4 d-flex flex-column bg-success rounded shadow" action="{% url 'signup' %}" method="POST">
         {% csrf_token %}
         {{form}}
-        <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm" value="Signup" />
+        <input type="submit" class="btn btn-light text-success font-weight-bold fz-sm d-block w-50" value="Signup" />
     </form>
+    <div class="info-box">
+        <p class="helptext">Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    </div>
 </div>
 
 {% endblock %}
