--- a/home/templates/registration/logged_out.html
+++ b/home/templates/registration/logged_out.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}
+Logged out
+{% endblock %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url 'admin:index' %}">{% translate 'Home' %}</a></div>{% endblock %}
 
