--- a/home/templates/registration/password_change_done.html
+++ b/home/templates/registration/password_change_done.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% translate 'Password changed' %}{% endblock %}
+
+{% block branding %}{% translate 'Password changed' %}{% endblock %
 {% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Documentation' %}</a> / {% endif %}{% translate 'Change password' %} / <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
