--- a/home/templates/registration/password_change_form.html
+++ b/home/templates/registration/password_change_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load i18n static %}
+{% block title %}{% translate 'Change password' %}{% endblock %}
+{% block branding %}{% translate 'Change password' %}{% endblock %
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
 {% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Documentation' %}</a> / {% endif %} {% translate 'Change password' %} / <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>{% endblock %}
 {% block breadcrumbs %}
