--- a/home/templates/registration/password_reset_complete.html
+++ b/home/templates/registration/password_reset_complete.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% translate 'Password reset complete' %}{% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
