--- a/home/templates/registration/password_reset_confirm.html
+++ b/home/templates/registration/password_reset_confirm.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load i18n static %}
-
+{% block title %}{% translate 'Password reset confirmation' %}{% endblock %}
+{% block branding %}{% translate 'Password reset confirmation' %}{% endblock %}
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
