--- a/home/templates/registration/password_reset_form.html
+++ b/home/templates/registration/password_reset_form.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% load i18n static %}
+{% block title %}
+{% translate 'Password reset' %}
+{% endblock %}
+
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
 {% block breadcrumbs %}
