--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -2,6 +2,9 @@
     --green: #27ae60;
     --greenOpac: rgba(39, 174, 96,.1);
     --green-alt: #219150;
+    --lightGreen: rgb(130, 246, 153);
+    --darkGreen: rgb(2, 44, 2);
+    /* rgb(5, 39, 43) */
 }
 html {
     scroll-behavior: smooth;
@@ -81,6 +84,12 @@ body {
 .fz-sm {
     font-size: 1.4rem;
 }
+.fz-lg {
+    font-size: 1.6rem;
+}
+.fz-lg2 {
+    font-size: 1.8rem;
+}
 .ttu {
     text-transform: uppercase!important;
 }
@@ -153,3 +162,87 @@ svg {
     font-size: 1.4rem;
 } 
 /* faq end of accordion */
+/* dashboard styles */
+.dashboard-side-nav {
+    width: 4.5rem;
+    left: .5rem;
+    height: 95vh;
+    margin-top: 2.5vh;
+    border-radius: 10px;
+    overflow: hidden;
+
+    .dashboard-side-nav-menu li {
+        width: 100%;
+        height: 2.5rem;
+        margin-bottom: 0.5rem;
+        border-radius: 30px;
+        overflow: hidden;
+    }
+    .dashboard-side-nav-menu a {
+        width: 100%;
+        height: 100%;
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        background-color: rgb(35, 117, 27);
+        font-weight: bold;
+        display: flex;
+        gap: .5rem;
+        line-height: 2em;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 0.5rem;
+    }
+    .dashboard-side-nav-menu a.active {
+        background-color: var(--lightGreen);
+        color: var(--darkGreen);
+    }
+}
+.main-dashboard-container {
+    width: calc(100% - 17rem);
+    position: relative;
+    left: 16.5rem;
+    margin-right: 1rem;
+    height: 95vh;
+    margin-top: 2.5vh;
+    border-radius: 10px;
+    overflow: hidden;
+
+    .main-content-container {
+        width: 100%;
+        height: 85%;
+        padding: 2rem;
+        padding-bottom: 0;
+        background-color: var(--greenOpac);
+
+        .tab-content-box {
+            height: 85%;
+            padding: .5rem 1rem;
+            width: 100%;
+            overflow: hidden;
+            overflow-y: auto;
+            transform: scale(0);
+            position: absolute;
+            top: 62px;
+            left: 0;
+            transition: .5s ease-in-out;
+            -webkit-transition: .5s ease-in-out;
+            -ms-transition: .5s ease-in-out;
+            -moz-transition: .5s ease-in-out;
+            -o-transition: .5s ease-in-out;
+        }
+        .tab-content-box.active {
+            transform: scale(1);
+        }
+    }
+    .dashboard-footer {
+        width: 100%;
+        height: 2rem;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+}
+/* end of dashboard styles */
