--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/all.js' %}"></script>
+     <!-- Google Recaptcha     -->
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+     
 </head>
 <body> 
 
